--- a/CreatedBy.lyx
+++ b/CreatedBy.lyx
@@ -41,7 +41,7 @@
     \vspace*{\fill}
 %    \hfill
     \begin{center}
-      \emph{This page intentionally left blank!}
+      \emph{This page is intentionally left blank!}
     \end{center}
     \vspace{\fill}
 %    \thispagestyle{empty}
